--- a/ios/ScreenShareAccPackKit/OTScreenShareAccPackKit/Base.lproj/Main.storyboard
+++ b/ios/ScreenShareAccPackKit/OTScreenShareAccPackKit/Base.lproj/Main.storyboard
@@ -128,10 +128,10 @@
             </objects>
             <point key="canvasLocation" x="-306" y="1442"/>
         </scene>
-        <!--View Controller-->
+        <!--Share Whole Screen View Controller-->
         <scene sceneID="jtg-8a-82I">
             <objects>
-                <viewController id="6h9-a0-wVj" sceneMemberID="viewController">
+                <viewController id="6h9-a0-wVj" customClass="ShareWholeScreenViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1oY-CK-kmB"/>
                         <viewControllerLayoutGuide type="bottom" id="SBI-UP-78V"/>
@@ -139,8 +139,24 @@
                     <view key="view" contentMode="scaleToFill" id="Jjg-f5-owG">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jUp-6L-XGK">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SBI-UP-78V" firstAttribute="top" secondItem="jUp-6L-XGK" secondAttribute="bottom" id="1nb-vX-l8c"/>
+                            <constraint firstItem="jUp-6L-XGK" firstAttribute="leading" secondItem="Jjg-f5-owG" secondAttribute="leading" id="b9t-xK-d3C"/>
+                            <constraint firstItem="jUp-6L-XGK" firstAttribute="top" secondItem="Jjg-f5-owG" secondAttribute="top" id="lEo-KA-cXv"/>
+                            <constraint firstAttribute="trailing" secondItem="jUp-6L-XGK" secondAttribute="trailing" id="oAC-fY-Rt6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="jUp-6L-XGK" id="MZC-gb-qjP"/>
+                        <segue destination="d69-l0-PFN" kind="presentation" identifier="ColorViewControllerSegue" id="Lvx-pL-6bt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Bn-he-HP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -163,6 +179,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="chR-xQ-bkd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="351" y="307"/>
+        </scene>
+        <!--Color View Controller-->
+        <scene sceneID="hDp-QW-9HK">
+            <objects>
+                <viewController id="d69-l0-PFN" customClass="ColorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vhS-9W-YyV"/>
+                        <viewControllerLayoutGuide type="bottom" id="XPm-N4-2Xe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pR6-BB-cYd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRg-Mc-CN2">
+                                <rect key="frame" x="271" y="285" width="58" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Dismiss">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dismissButtonPressed:" destination="d69-l0-PFN" eventType="touchUpInside" id="Fv1-3N-jOw"/>
+                                    <segue destination="yMn-Uj-aYi" kind="unwind" unwindAction="prepareForUnwind:" id="LrL-bL-AkP"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rRg-Mc-CN2" firstAttribute="centerX" secondItem="pR6-BB-cYd" secondAttribute="centerX" id="Ncm-AH-DT7"/>
+                            <constraint firstItem="rRg-Mc-CN2" firstAttribute="centerY" secondItem="pR6-BB-cYd" secondAttribute="centerY" id="jRN-cx-kOb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WNG-Ly-UQG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="yMn-Uj-aYi" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="307"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="RFv-kM-ldc">
