--- a/ios/ScreenShareAccPackKit/OTScreenShareAccPackKit/Base.lproj/Main.storyboard
+++ b/ios/ScreenShareAccPackKit/OTScreenShareAccPackKit/Base.lproj/Main.storyboard
@@ -96,6 +96,26 @@
                                             <segue destination="3l1-4L-cjk" kind="show" id="mYm-VZ-ZK5"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="oKL-Bn-t2i" style="IBUITableViewCellStyleDefault" id="TpI-Qd-WRz">
+                                        <rect key="frame" x="0.0" y="240" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TpI-Qd-WRz" id="tsV-BJ-Ewx">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Remote annotation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oKL-Bn-t2i">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="kji-Gk-YJN" kind="show" id="SlC-C7-Efr"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -233,6 +253,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Sm-RZ-9db" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="114" y="1126"/>
+        </scene>
+        <!--Remote Annotation View Controller-->
+        <scene sceneID="zAd-BK-281">
+            <objects>
+                <viewController id="kji-Gk-YJN" customClass="RemoteAnnotationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1ue-7E-LmL"/>
+                        <viewControllerLayoutGuide type="bottom" id="X34-7D-e5A"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TBi-ux-6Pa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZCf-I2-ke3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="819" y="1031"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0bU-8Z-c6p">
